feat: add ItemRequest